syntax = "proto3";

option csharp_namespace = "QuantLab.MarketData.Hub.Grpc";

package job;

service JobService {
  rpc StartJob (Empty) returns (JobReply);
  rpc StartMarketDataJob (Empty) returns (JobReply);
  rpc StopMarketDataJob (Empty) returns (JobReply);
  rpc GetMarketDataStatus (Empty) returns (MarketDataStatusReply);
}

message Empty {}

message JobReply {
  string message = 1;
}

message MarketDataStatusReply {
  bool isRunning = 1;
  string lastFetchTime = 2;
  string lastError = 3;
  string lastResponseSnippet = 4;
  int32 fetchCount = 5;
}